<resources>
    <string name="app_name">infoParks-beta</string>
    <string name="nairobi">NAIROBI</string>
    <string name="central">CENTRAL</string>
    <string name="eastern">EASTERN</string>
    <string name="northeastern">NORTH EASTERN</string>
    <string name="coast">COAST</string>
    <string name="riftvalley"> RIFT VALLEY</string>
    <string name="nyanza">NYANZA</string>
    <string name="western">WESTERN</string>
    <string name="central_title">Parks In Central Kenya</string>
    <string name="mount">Mount Kenya National Park</string>
    <string name="aberdare">Aberdare National Park</string>
    <string name="nairobi_title">Parks In Nairobi Kenya</string>
    <string name="naipark">Nairobi National Park</string>
    <string name="orphanagepark">Nairobi Animal Orphanage</string>
    <string name="eastern_title">Parks In Eastern Kenya</string>
    <string name="teast">Tsavo East National Park</string>
    <string name="chyulupark">Chyulu National Park</string>
    <string name="north_title">Parks In North Eastern Kenya</string>
    <string name="samburupark">Samburu National Park</string>
    <string name="shabapark">Shaba National Park</string>
    <string name="coast_title">Parks At The Coast of Kenya</string>
    <string name="mombasapark">Mombasa Marine National Park</string>
    <string name="malindipark">Malindi Marine National Park</string>
    <string name="kisitepark">Kisite Mpunguti Marine Park</string>
    <string name="watamupark">Watamu Marine National Park</string>
    <string name="riftValley_title">Parks In Rift Valley Kenya</string>
    <string name="amboseliPark">Amboseli National Park</string>
    <string name="longonotPark">Mt. Longonot National Park</string>
    <string name="maasaiMaraPark">Maasai Mara National Park</string>
    <string name="lakeNakuruPark">Lake Nakuru National Park</string>
    <string name="nyanza_title">Parks In Nyanza Kenya</string>
    <string name="rumaPark">Ruma National Park</string>
    <string name="western_title">Parks In Nyanza Kenya</string>
    <string name="elgonPark">Mt. Elgon National Park</string>
    <string name="nairobipark">nairobipark</string>
    <string name="nairobititle">Nairobi National Park</string>
    <string name="nairobiabout">About</string>
    <string name="nairobicontent1">A short drive out of Nairobi central business district is the Nairobi National Park. Wide open grass plains and backdrop of the city scrapers, scattered acacia bush play host to a wide variety of wildlife including the endangered black rhino, lions, leopards, cheetahs, hyenas, buffaloes, giraffes and diverse birdlife with over 400 species recorded. Visitors can enjoy the parks picnic sites, three campsites and the walking trails for hikers.</string>
    <string name="nairobifeatures">Key Features</string>
    <string name="nairobiwildlife">Wildlife</string>
    <string name="nairobipicnic">Picnic Facilities</string>
    <string name="orphanagetitle">Nairobi Animal Orphange</string>
    <string name="orphanageabout">About</string>
    <string name="orphanagecontent1">The Nairobi Animal Orphanage is located in the Nairobi National Park. It serves a treatments and rehabilitation centre for wild animals. The Orphanage hosts lions, cheetahs, hyenas, jackals, serval cats, rare Sokoke cats, warthogs, leopards, various monkeys, baboons and buffalo. Various birds can also be viewed including parrots, guinea fowls, crowned cranes and ostriches.</string>
    <string name="orphanagefeatures">Key Features</string>
    <string name="orphanagewildlife">Wildlife</string>
    <string name="orphanagepicnic">Birds</string>
    <string name="orphanage">orphanage</string>
    <string name="coasttitle">Mombasa Marine Park</string>
    <string name="coastabout">About</string>
    <string name="coastcontent1">Warm azure ocean, swaying coconut palms on white sandy beaches are to be found in the Mombasa Marine National Park and Reserve. The park lies between the Mtwapa and Tudor Creeks and its blue waters are ideal for wind surfing, water skiing, snorkelling and diving. They also provide a home to a colourful variety of marine species including crabs, starfish, stone fish, cucumbers sea urchins, corals, turtles, sea grasses and interesting migratory birds including crab plovers.</string>
    <string name="coastfeatures">Key Features</string>
    <string name="coastwildlife">Abundant Bird Life</string>
    <string name="coastpicnic">Fish</string>
    <string name="watamutitle">Watamu Marine Park</string>
    <string name="watamuabout">About</string>
    <string name="watamucontent1">Green turtles, unique coral gardens, the Gede Ruins – the Watamu Marine National Park and Reserve has it all. The park is part of a complex of marine and tidal habitats along the Kenya’s north coast with rich and diverse bird life, fish, turtles and dugongs. Visitors can enjoy the white sandy beaches, snorkeling, water skiing, windsurfing and glass bottomed boat tours.</string>
    <string name="watamufeatures">Key Features</string>
    <string name="watamuwildlife">Abundant Bird Life</string>
    <string name="watamupicnic">Fish</string>
    <string name="malindititle">Malindi Marine Park</string>
    <string name="malindiabout">About</string>
    <string name="malindicontent1">From swimming with zebra fish to windsurfing, this beautiful slice of Kenyas Indian Ocean coastline is provides the perfect getaway. The park is endowed with magnificent resources such as fringing reefs, coral gardens in the lagoons, sea grass beds, mangroves, mudflats, marine mammals, turtles and various species of shorebirds. Visitors can also enjoy glass bottom boat rides, snorkelling, camping and beach walks in this veritable paradise.</string>
    <string name="malindifeatures">Key Features</string>
    <string name="malindiwildlife">Marine Life</string>
    <string name="malindipicnic">Fish</string>
    <string name="kisitetitle">Kisite Mpunguti Marine Park</string>
    <string name="kisiteabout">About</string>
    <string name="kisitecontent1">Unspoiled, beautiful and sun kissed, the Kisite Marine Park was established to protect the scenic islands and special habitats of a wide range of endemic marine animals and breeding migratory birds. It lies in the coral gardens south of Wasini Island and encompasses three small coral rag forest islands, each with considerable areas of fringing reef. Kisite is one of the most rewarding snorkelling locations at the coast. Visitors can also enjoy bird watching, diving and of course, sunbathing.</string>
    <string name="kisitefeatures">Key Features</string>
    <string name="kisitewildlife">Abundant Bird Life</string>
    <string name="kisitepicnic">Fish</string>
    <string name="amboselititle">Amboseli National Park</string>
    <string name="amboseliabout">About</string>
    <string name="amboselicontent1">The park is 39,206 hectares in size at the core of an 8,000 square kilometres ecosystem that spreads across the Kenya-Tanzania border. The local people are mainly Maasai, but people from other parts of the country have settled there attracted by the successful tourist-driven economy and intensive agriculture along the system of swamps that makes this low-rainfall area one of the best widlife-viewing experiences in the world. The park protects two of the five main swamps, and includes a dried-up Pleistocene lake and semi-arid vegetation.</string>
    <string name="amboselifeatures">Key Features</string>
    <string name="amboseliwildlife"></string>
    <string name="amboselipicnic"></string>
    <string name="Maasaimaratitle">Maasai Mara National Park</string>
    <string name="Maasaimaraabout">About</string>
    <string name="Maasaimaracontent1"> The Maasai Mara National Reserve is one of the richest and most diverse wildlife areas in the world. Known as the ‘spotted land’ to the Maasai, the reserve is home to a vast number of resident wildlife, as well as part of the annual phenomenon of the Great Migration. The migratory wildebeest, zebra, kongoni and topi join abundant elephant, hippo, buffalo, giraffe, lion and cheetah in the Mara.</string>
    <string name="Maasaimarafeatures">Key Features</string>
    <string name="Maasaimarawildlife"></string>
    <string name="Maasaimarapicnic"></string>
    <string name="longonottitle">Mt. Longonot National Park</string>
    <string name="longonotabout">About</string>
    <string name="longonotcontent1">A young volcano which rises to 2,776 meters above sea level, is an arresting sight for visitors to the Naivasha basin. Created amongst the massive eruptions which formed the Great Rift Valley, its sides now have beautiful V-shaped valleys and ridges with impenetrable forest around the area of the crater giving it a lush green aspect. The park surrounds the volcano.</string>
    <string name="longonotfeatures">Key Features</string>
    <string name="longonotwildlife"></string>
    <string name="longonotpicnic"></string>
    <string name="nakurutitle">Lake Nakuru National Park</string>
    <string name="nakuruabout">About</string>
    <string name="nakurucontent1">Lake Nakuru is world famous for, and was created a National Park, to protect its stunning flocks of lesser flamingo, which literally turn its shores pink. Its birdlife is world renowned: a beacon for leading ornithologists, scientists and wildlife film-makers. The park spans an attractive range of wooded and bush grassland around the lake offering wide ecological diversity, from lake water, woodland to the rocky escarpments and ridges.</string>
    <string name="nakurufeatures">Key Features</string>
    <string name="nakuruwildlife"></string>
    <string name="nakurupicnic"></string>
    <string name="rumatitle">Ruma National Park</string>
    <string name="rumaabout">About</string>
    <string name="rumacontent1">Ruma National Park covering an area of 120km2 is the only National Park in the entire Nyanza region  close to the shores of Lake Victoria. Population of rare roan antelopes which exist nowhere else in Kenya. It is also popular for its rare intra – African migrant, the blue swallow, and other over 400 bird species.</string>
    <string name="rumafeatures">Key Features</string>
    <string name="rumawildlife"></string>
    <string name="rumapicnic"></string>
    <string name="elgontitle">Mt. Elgon National Park</string>
    <string name="elgonabout">About</string>
    <string name="elgoncontent1">Park is home to an estimated 400 elephants, buffalo, leopard, the protected colobus and blue monkeys, giant forest hog, watwerbuck and various other types of antelope. Over 240 species of birds have been recorded. Huge Elgon teak and cedar trees, some over 80 ft tall, dominate the forest scenery.</string>
    <string name="elgonfeatures">Key Features</string>
    <string name="elgonwildlife"></string>
    <string name="elgonpicnic"></string>
    <string name="samburu">Enjoy a quintessential Kenyan northern safari with unrestricted access to rugged East African wilderness by including Samburu National Reserve in your bush plans! The 165-square kilometers (64 square miles) reserve is located northeast of Laikipia and is home to some of Africa’s rarest flora and fauna.</string>
    <string name="laikipia">Laikipia National Reserve is a remote and truly wild corner of Kenya, the Laikipia National Park boasts incredible game viewing in a spectacularly beautiful setting. Two rivers, the Ewaso Nyiro and Ewaso Narok run through the area, attracting a rich variety of wildlife, including the second largest population of elephant in Kenya.</string>
</resources>